--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <body class="bg-brand-ivory text-brand-charcoal font-sans antialiased">
     <!-- Hidden form for Netlify detection -->
     <!-- Note: honeypot removed to avoid complex state handling, standard netlify protection applies -->
-    <form name="contact" netlify="true" hidden>
+    <form name="contact" data-netlify="true" hidden>
       <input type="text" name="name" />
       <input type="text" name="phone" />
       <input type="email" name="email" />
